--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Festivals -- Juvenile literature'
 - !lcsh 'Holidays -- Juvenile literature'
 - !lcc 'PZ'
+- GITenberg
 title: 'Our Holidays
 
   Their Meaning and Spirit; retold from St. Nicholas'
